vendor/formats-der-v0.7.8/tls_codec/derive/tests/attributes/that_non_default_field_does_not_compile.stderr
error[E0277]: the trait bound `NonDefaultField: Default` is not satisfied
 --> tests/attributes/that_non_default_field_does_not_compile.rs:5:10
  |
5 | #[derive(TlsDeserialize, TlsSerialize, TlsSize)]
  |          ^^^^^^^^^^^^^^ the trait `Default` is not implemented for `NonDefaultField`
  |
  = note: this error originates in the derive macro `TlsDeserialize` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider annotating `NonDefaultField` with `#[derive(Default)]`
  |
3 + #[derive(Default)]
4 | struct NonDefaultField {}
  |
