vendor/formats-der-v0.7.8/tls_codec/derive/tests/attributes/that_non_default_field_does_not_compile.rs
use tls_codec_derive::{TlsDeserialize, TlsSerialize, TlsSize};

struct NonDefaultField {}

#[derive(TlsDeserialize, TlsSerialize, TlsSize)]
struct StructWithNonDefaultField {
    #[tls_codec(skip)]
    a: NonDefaultField,
    b: u8,
}

fn main() {}
